Add better support for finding symbol declaration